Impl window and better foreign resource management